--- a/jQuery实现懒加载/图片懒加载/index.html
+++ b/jQuery实现懒加载/图片懒加载/index.html
@@ -32,6 +32,7 @@
 
         .img-list > li >img {
             width: 300px;
+            height: 500px;
         }
         
 
@@ -40,26 +41,26 @@
 <body>
     <div class="img-box clearfix">
         <ul class="img-list clearfix">
-            <li><img src="images/20.jpg" alt="" data-img="images/1.jpg"/></li>
-            <li><img src="images/20.jpg" alt="" data-img="images/2.jpg"/></li>
-            <li><img src="images/20.jpg" alt="" data-img="images/3.jpg"/></li>
-            <li><img src="images/20.jpg" alt="" data-img="images/4.jpg"/></li>
-            <li><img src="images/20.jpg" alt="" data-img="images/5.jpg"/></li>
-            <li><img src="images/20.jpg" alt="" data-img="images/6.jpg"/></li>
-            <li><img src="images/20.jpg" alt="" data-img="images/7.jpg"/></li>
-            <li><img src="images/20.jpg" alt="" data-img="images/8.jpg"/></li>
-            <li><img src="images/20.jpg" alt="" data-img="images/9.jpg"/></li>
-            <li><img src="images/20.jpg" alt="" data-img="images/10.jpg"/></li>
-            <li><img src="images/20.jpg" alt="" data-img="images/11.jpg"/></li>
-            <li><img src="images/20.jpg" alt="" data-img="images/12.jpg"/></li>
-            <li><img src="images/20.jpg" alt="" data-img="images/13.jpg"/></li>
-            <li><img src="images/20.jpg" alt="" data-img="images/14.jpg"/></li>
-            <li><img src="images/20.jpg" alt="" data-img="images/15.jpg"/></li>
-            <li><img src="images/20.jpg" alt="" data-img="images/16.jpg"/></li>
-            <li><img src="images/20.jpg" alt="" data-img="images/17.jpg"/></li>
-            <li><img src="images/20.jpg" alt="" data-img="images/18.jpg"/></li>
-            <li><img src="images/20.jpg" alt="" data-img="images/19.jpg"/></li>
-            <li><img src="images/20.jpg" alt="" data-img="images/20.jpg"/></li>
+            <li><img src="https://b-ssl.duitang.com/uploads/item/201701/31/20170131135613_Chxd8.thumb.700_0.jpeg" alt="" data-img="https://b-ssl.duitang.com/uploads/item/201703/19/20170319091111_BAick.thumb.700_0.jpeg"/></li>
+            <li><img src="https://b-ssl.duitang.com/uploads/item/201701/31/20170131135613_Chxd8.thumb.700_0.jpeg" alt="" data-img="https://b-ssl.duitang.com/uploads/item/201612/09/20161209133828_UMKCk.thumb.700_0.png"/></li>
+            <li><img src="https://b-ssl.duitang.com/uploads/item/201701/31/20170131135613_Chxd8.thumb.700_0.jpeg" alt="" data-img="https://b-ssl.duitang.com/uploads/item/201405/16/20140516211445_ECLL8.thumb.700_0.jpeg"/></li>
+            <li><img src="https://b-ssl.duitang.com/uploads/item/201701/31/20170131135613_Chxd8.thumb.700_0.jpeg" alt="" data-img="https://b-ssl.duitang.com/uploads/item/201510/03/20151003130921_W3kJf.thumb.700_0.jpeg"/></li>
+            <li><img src="https://b-ssl.duitang.com/uploads/item/201701/31/20170131135613_Chxd8.thumb.700_0.jpeg" alt="" data-img="https://b-ssl.duitang.com/uploads/item/201309/19/20130919174906_Kw3Tc.thumb.700_0.jpeg"/></li>
+            <li><img src="" alt="" data-img="https://b-ssl.duitang.com/uploads/item/201612/13/20161213124550_Jnvt4.thumb.700_0.jpeg"/></li>
+            <li><img src="https://b-ssl.duitang.com/uploads/item/201701/31/20170131135613_Chxd8.thumb.700_0.jpeg" alt="" data-img="https://b-ssl.duitang.com/uploads/item/201605/05/20160505225546_582wC.thumb.700_0.jpeg"/></li>
+            <li><img src="https://b-ssl.duitang.com/uploads/item/201701/31/20170131135613_Chxd8.thumb.700_0.jpeg" alt="" data-img="https://b-ssl.duitang.com/uploads/item/201702/17/20170217182832_u5E3A.thumb.700_0.jpeg"/></li>
+            <li><img src="https://b-ssl.duitang.com/uploads/item/201701/31/20170131135613_Chxd8.thumb.700_0.jpeg" alt="" data-img="https://b-ssl.duitang.com/uploads/item/201702/17/20170217182822_h4BZM.thumb.700_0.jpeg"/></li>
+            <li><img src="https://b-ssl.duitang.com/uploads/item/201701/31/20170131135613_Chxd8.thumb.700_0.jpeg" alt="" data-img="https://b-ssl.duitang.com/uploads/item/201508/21/20150821001900_JVvsn.thumb.700_0.jpeg"/></li>
+            <li><img src="https://b-ssl.duitang.com/uploads/item/201701/31/20170131135613_Chxd8.thumb.700_0.jpeg" alt="" data-img="https://b-ssl.duitang.com/uploads/item/201506/22/20150622130901_XTUfR.thumb.700_0.jpeg"/></li>
+            <li><img src="https://b-ssl.duitang.com/uploads/item/201701/31/20170131135613_Chxd8.thumb.700_0.jpeg" alt="" data-img="https://b-ssl.duitang.com/uploads/item/201601/12/20160112175912_aSZAF.thumb.700_0.jpeg"/></li>
+            <li><img src="https://b-ssl.duitang.com/uploads/item/201701/31/20170131135613_Chxd8.thumb.700_0.jpeg" alt="" data-img="https://b-ssl.duitang.com/uploads/item/201601/19/20160119231226_H3ks8.thumb.700_0.jpeg"/></li>
+            <li><img src="https://b-ssl.duitang.com/uploads/item/201701/31/20170131135613_Chxd8.thumb.700_0.jpeg/" alt="" data-img="https://b-ssl.duitang.com/uploads/item/201612/09/20161209195837_4VUBz.thumb.700_0.jpeg"/></li>
+            <li><img src="https://b-ssl.duitang.com/uploads/item/201701/31/20170131135613_Chxd8.thumb.700_0.jpeg" alt="" data-img="https://b-ssl.duitang.com/uploads/item/201612/10/20161210205507_SCuyM.thumb.700_0.png"/></li>
+            <li><img src="https://b-ssl.duitang.com/uploads/item/201701/31/20170131135613_Chxd8.thumb.700_0.jpeg" alt="" data-img="https://b-ssl.duitang.com/uploads/item/201402/20/20140220231557_JuK58.thumb.700_0.jpeg"/></li>
+            <li><img src="https://b-ssl.duitang.com/uploads/item/201701/31/20170131135613_Chxd8.thumb.700_0.jpeg" alt="" data-img="https://b-ssl.duitang.com/uploads/item/201503/07/20150307154439_fNc2L.thumb.700_0.jpeg"/></li>
+            <li><img src="https://b-ssl.duitang.com/uploads/item/201701/31/20170131135613_Chxd8.thumb.700_0.jpeg" alt="" data-img="https://b-ssl.duitang.com/uploads/item/201601/16/20160116163707_rmkXR.thumb.700_0.jpeg"/></li>
+            <li><img src="https://b-ssl.duitang.com/uploads/item/201701/31/20170131135613_Chxd8.thumb.700_0.jpeg" alt="" data-img="https://b-ssl.duitang.com/uploads/item/201504/11/20150411H1835_GZm4a.thumb.700_0.jpeg"/></li>
+            <li><img src="https://b-ssl.duitang.com/uploads/item/201701/31/20170131135613_Chxd8.thumb.700_0.jpeg" alt="" data-img="https://b-ssl.duitang.com/uploads/item/201505/22/20150522201242_KCE4m.thumb.700_0.jpeg"/></li>
         </ul>
     </div>
 </body>
@@ -68,11 +69,10 @@
     $imgList = $('.img-list li img');
     check();
     $(window).on('scroll', check);
-
     function check (){
         $imgList.not('show').each(function() {
             if(isShow($(this))){
-                showImg($(this));
+               showImg($(this));
             }
         });   
     }
