--- a/jQuery实现懒加载/图片懒加载/index.html
+++ b/jQuery实现懒加载/图片懒加载/index.html
@@ -41,12 +41,12 @@
 <body>
     <div class="img-box clearfix">
         <ul class="img-list clearfix">
-            <li><img src="https://b-ssl.duitang.com/uploads/item/201701/31/20170131135613_Chxd8.thumb.700_0.jpeg" alt="" data-img="https://b-ssl.duitang.com/uploads/item/201703/19/20170319091111_BAick.thumb.700_0.jpeg"/></li>
-            <li><img src="https://b-ssl.duitang.com/uploads/item/201701/31/20170131135613_Chxd8.thumb.700_0.jpeg" alt="" data-img="https://b-ssl.duitang.com/uploads/item/201612/09/20161209133828_UMKCk.thumb.700_0.png"/></li>
-            <li><img src="https://b-ssl.duitang.com/uploads/item/201701/31/20170131135613_Chxd8.thumb.700_0.jpeg" alt="" data-img="https://b-ssl.duitang.com/uploads/item/201405/16/20140516211445_ECLL8.thumb.700_0.jpeg"/></li>
-            <li><img src="https://b-ssl.duitang.com/uploads/item/201701/31/20170131135613_Chxd8.thumb.700_0.jpeg" alt="" data-img="https://b-ssl.duitang.com/uploads/item/201510/03/20151003130921_W3kJf.thumb.700_0.jpeg"/></li>
-            <li><img src="https://b-ssl.duitang.com/uploads/item/201701/31/20170131135613_Chxd8.thumb.700_0.jpeg" alt="" data-img="https://b-ssl.duitang.com/uploads/item/201309/19/20130919174906_Kw3Tc.thumb.700_0.jpeg"/></li>
-            <li><img src="" alt="" data-img="https://b-ssl.duitang.com/uploads/item/201612/13/20161213124550_Jnvt4.thumb.700_0.jpeg"/></li>
+            <li><img src="https://b-ssl.duitang.com/uploads/item/201701/31/20170131135613_Chxd8.thumb.700_0.jpeg" alt="" data-img="https://b-ssl.duitang.com/uploads/item/201603/05/20160305160124_f2TiQ.thumb.700_0.jpeg"/></li>
+            <li><img src="https://b-ssl.duitang.com/uploads/item/201701/31/20170131135613_Chxd8.thumb.700_0.jpeg" alt="" data-img="https://b-ssl.duitang.com/uploads/item/201611/30/20161130190401_U5zwP.thumb.700_0.png"/></li>
+            <li><img src="https://b-ssl.duitang.com/uploads/item/201701/31/20170131135613_Chxd8.thumb.700_0.jpeg" alt="" data-img="https://a-ssl.duitang.com/uploads/item/201408/18/20140818205744_unFBx.thumb.700_0.jpeg"/></li>
+            <li><img src="https://b-ssl.duitang.com/uploads/item/201701/31/20170131135613_Chxd8.thumb.700_0.jpeg" alt="" data-img="https://b-ssl.duitang.com/uploads/item/201408/18/20140818205810_FziV3.thumb.700_0.jpeg"/></li>
+            <li><img src="https://b-ssl.duitang.com/uploads/item/201701/31/20170131135613_Chxd8.thumb.700_0.jpeg" alt="" data-img="https://b-ssl.duitang.com/uploads/item/201510/30/20151030231058_TuMhU.thumb.700_0.png"/></li>
+            <li><img src="" alt="" data-img="https://b-ssl.duitang.com/uploads/item/201609/08/20160908142848_XZR2t.thumb.700_0.jpeg"/></li>
             <li><img src="https://b-ssl.duitang.com/uploads/item/201701/31/20170131135613_Chxd8.thumb.700_0.jpeg" alt="" data-img="https://b-ssl.duitang.com/uploads/item/201605/05/20160505225546_582wC.thumb.700_0.jpeg"/></li>
             <li><img src="https://b-ssl.duitang.com/uploads/item/201701/31/20170131135613_Chxd8.thumb.700_0.jpeg" alt="" data-img="https://b-ssl.duitang.com/uploads/item/201702/17/20170217182832_u5E3A.thumb.700_0.jpeg"/></li>
             <li><img src="https://b-ssl.duitang.com/uploads/item/201701/31/20170131135613_Chxd8.thumb.700_0.jpeg" alt="" data-img="https://b-ssl.duitang.com/uploads/item/201702/17/20170217182822_h4BZM.thumb.700_0.jpeg"/></li>
