--- a/jQuery实现懒加载/图片懒加载/index.html
+++ b/jQuery实现懒加载/图片懒加载/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
 <head>
+    <meta name="referrer" content="no-referrer">
     <meta charset="UTF-8" />
     <title>图片懒加载</title>
     <style>
