--- a/jQuery实现轮播图/index.html
+++ b/jQuery实现轮播图/index.html
@@ -104,7 +104,7 @@
             <li></li>
         </ul>
     </div>
-    <script src="http://apps.bdimg.com/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/2.0.0/jquery.min.js"></script>
     <script>
         ///////自定义变量/////////
         var $slidesUl = $('.slides-img'),               
