--- a/jQuery实现瀑布流-木桶流布局/瀑布流/index.html
+++ b/jQuery实现瀑布流-木桶流布局/瀑布流/index.html
@@ -29,48 +29,55 @@
             box-shadow: 1px 2px 6px #333;
         }
 
+        .imgUl > li:hover {
+            transform: scale(1.2,1.2);
+            z-index:999;
+        }
+
         .imgUl img {
             vertical-align: middle;
             border: none;
             width: 320px;
         }
+
+
     </style>
 </head>
 <body>
     <div class="waterfull">
         <ul class="imgUl">
-            <li><img src="https://b-ssl.duitang.com/uploads/item/201501/04/20150104034133_kGHPr.thumb.700_0.jpeg" alt=""></li>
-            <li><img src="https://b-ssl.duitang.com/uploads/item/201502/20/20150220203019_KdxhK.thumb.700_0.jpeg" alt=""></li>
-            <li><img src="https://b-ssl.duitang.com/uploads/item/201508/29/20150829130859_HMQVy.thumb.700_0.jpeg" alt=""></li>
-            <li><img src="https://b-ssl.duitang.com/uploads/item/201303/22/20130322214143_sPUsZ.thumb.700_0.jpeg" alt=""></li>
-            <li><img src="https://b-ssl.duitang.com/uploads/blog/201403/19/20140319111448_522iX.thumb.700_0.jpeg" alt=""></li>
-            <li><img src="https://b-ssl.duitang.com/uploads/item/201702/25/20170225211743_FsTj8.thumb.700_0.jpeg" alt=""></li>
-            <li><img src="https://b-ssl.duitang.com/uploads/item/201702/25/20170225210922_325Lu.thumb.700_0.jpeg" alt=""></li>
-            <li><img src="https://b-ssl.duitang.com/uploads/item/201602/21/20160221230416_dMUwy.thumb.700_0.jpeg" alt=""></li>
-            <li><img src="https://b-ssl.duitang.com/uploads/item/201608/15/20160815170202_iVhKm.thumb.700_0.jpeg" alt=""></li>
-            <li><img src="https://b-ssl.duitang.com/uploads/item/201512/20/20151220131355_4ktZn.thumb.700_0.jpeg" alt=""></li>
-            <li><img src="https://b-ssl.duitang.com/uploads/item/201605/14/20160514110635_MzKPJ.thumb.700_0.jpeg" alt=""></li>
-            <li><img src="https://b-ssl.duitang.com/uploads/item/201611/04/20161104233146_8jvkz.thumb.700_0.jpeg" alt=""></li>
-            <li><img src="https://b-ssl.duitang.com/uploads/item/201501/02/20150102190405_aRzmP.thumb.700_0.jpeg" alt=""></li>
-            <li><img src="https://b-ssl.duitang.com/uploads/item/201608/14/20160814220033_sV5E4.thumb.700_0.png" alt=""></li>
-            <li><img src="https://b-ssl.duitang.com/uploads/item/201612/04/20161204003906_XvEZV.thumb.700_0.jpeg" alt=""></li>
-            <li><img src="https://b-ssl.duitang.com/uploads/item/201505/01/20150501224059_GMsuc.thumb.700_0.jpeg" alt=""></li>
-            <li><img src="https://b-ssl.duitang.com/uploads/item/201207/10/20120710192155_XkiGA.thumb.700_0.jpeg" alt=""></li>
-            <li><img src="https://b-ssl.duitang.com/uploads/item/201612/04/20161204233353_hs3MS.thumb.700_0.jpeg" alt=""></li>
-            <li><img src="https://b-ssl.duitang.com/uploads/item/201608/01/20160801050025_tcCB5.thumb.700_0.jpeg" alt=""></li>
-            <li><img src="https://b-ssl.duitang.com/uploads/item/201611/12/20161112201645_CtTLW.thumb.700_0.jpeg" alt=""></li>
-            <li><img src="https://b-ssl.duitang.com/uploads/item/201608/01/20160801045937_N8zdY.thumb.700_0.jpeg" alt=""></li>
-            <li><img src="https://b-ssl.duitang.com/uploads/item/201703/20/20170320034707_VGSPB.thumb.700_0.png" alt=""></li>
-            <li><img src="https://b-ssl.duitang.com/uploads/item/201703/26/20170326143100_5eGnN.thumb.700_0.jpeg" alt=""></li>
-            <li><img src="https://b-ssl.duitang.com/uploads/item/201510/25/20151025021630_daVuf.thumb.700_0.jpeg" alt=""></li>
-            <li><img src="https://b-ssl.duitang.com/uploads/item/201607/09/20160709194603_cZm8K.thumb.700_0.jpeg" alt=""></li>
-            <li><img src="https://b-ssl.duitang.com/uploads/item/201702/27/20170227011025_KM5Ca.thumb.700_0.jpeg" alt=""></li>
-            <li><img src="https://b-ssl.duitang.com/uploads/blog/201308/31/20130831225339_zav34.thumb.700_0.jpeg" alt=""></li>
-            <li><img src="https://a-ssl.duitang.com/uploads/item/201503/24/20150324222021_EfV5Z.thumb.700_0.jpeg" alt=""></li>
-            <li><img src="https://b-ssl.duitang.com/uploads/item/201601/09/20160109223027_cxdWK.thumb.700_0.jpeg" alt=""></li>
-            <li><img src="https://b-ssl.duitang.com/uploads/item/201701/31/20170131135613_Chxd8.thumb.700_0.jpeg" alt=""></li>
-            <li><img src="https://b-ssl.duitang.com/uploads/item/201507/10/20150710224643_LPASG.thumb.700_0.jpeg" alt=""></li>
-            <li><img src="https://b-ssl.duitang.com/uploads/item/201704/02/20170402133125_B2EuR.thumb.700_0.jpeg" alt=""></li>
+            <li><a href="https://b-ssl.duitang.com/uploads/item/201501/04/20150104034133_kGHPr.thumb.700_0.jpeg" target="_blank"><img src="https://b-ssl.duitang.com/uploads/item/201501/04/20150104034133_kGHPr.thumb.700_0.jpeg" alt=""></a></li>
+            <li><a href="https://b-ssl.duitang.com/uploads/item/201502/20/20150220203019_KdxhK.thumb.700_0.jpeg" target="_blank"><img src="https://b-ssl.duitang.com/uploads/item/201502/20/20150220203019_KdxhK.thumb.700_0.jpeg" alt=""></a></li>
+            <li><a href="https://b-ssl.duitang.com/uploads/item/201508/29/20150829130859_HMQVy.thumb.700_0.jpeg" target="_blank"><img src="https://b-ssl.duitang.com/uploads/item/201508/29/20150829130859_HMQVy.thumb.700_0.jpeg" alt=""></a></li>
+            <li><a href="https://b-ssl.duitang.com/uploads/item/201303/22/20130322214143_sPUsZ.thumb.700_0.jpeg" target="_blank"><img src="https://b-ssl.duitang.com/uploads/item/201303/22/20130322214143_sPUsZ.thumb.700_0.jpeg" alt=""></a></li>
+            <li><a href="https://b-ssl.duitang.com/uploads/blog/201403/19/20140319111448_522iX.thumb.700_0.jpeg" target="_blank"><img src="https://b-ssl.duitang.com/uploads/blog/201403/19/20140319111448_522iX.thumb.700_0.jpeg" alt=""></a></li>
+            <li><a href="https://b-ssl.duitang.com/uploads/item/201702/25/20170225211743_FsTj8.thumb.700_0.jpeg" target="_blank"><img src="https://b-ssl.duitang.com/uploads/item/201702/25/20170225211743_FsTj8.thumb.700_0.jpeg" alt=""></a></li>
+            <li><a href="https://b-ssl.duitang.com/uploads/item/201702/25/20170225210922_325Lu.thumb.700_0.jpeg" target="_blank"><img src="https://b-ssl.duitang.com/uploads/item/201702/25/20170225210922_325Lu.thumb.700_0.jpeg" alt=""></a></li>
+            <li><a href="https://b-ssl.duitang.com/uploads/item/201602/21/20160221230416_dMUwy.thumb.700_0.jpeg" target="_blank"><img src="https://b-ssl.duitang.com/uploads/item/201602/21/20160221230416_dMUwy.thumb.700_0.jpeg" alt=""></a></li>
+            <li><a href="https://b-ssl.duitang.com/uploads/item/201608/15/20160815170202_iVhKm.thumb.700_0.jpeg" target="_blank"><img src="https://b-ssl.duitang.com/uploads/item/201608/15/20160815170202_iVhKm.thumb.700_0.jpeg" alt=""></a></li>
+            <li><a href="https://b-ssl.duitang.com/uploads/item/201512/20/20151220131355_4ktZn.thumb.700_0.jpeg" target="_blank"><img src="https://b-ssl.duitang.com/uploads/item/201512/20/20151220131355_4ktZn.thumb.700_0.jpeg" alt=""></a></li>
+            <li><a href="https://b-ssl.duitang.com/uploads/item/201605/14/20160514110635_MzKPJ.thumb.700_0.jpeg" target="_blank"><img src="https://b-ssl.duitang.com/uploads/item/201605/14/20160514110635_MzKPJ.thumb.700_0.jpeg" alt=""></a></li>
+            <li><a href="https://b-ssl.duitang.com/uploads/item/201611/04/20161104233146_8jvkz.thumb.700_0.jpeg" target="_blank"><img src="https://b-ssl.duitang.com/uploads/item/201611/04/20161104233146_8jvkz.thumb.700_0.jpeg" alt=""></a></li>
+            <li><a href="https://b-ssl.duitang.com/uploads/item/201501/02/20150102190405_aRzmP.thumb.700_0.jpeg" target="_blank"><img src="https://b-ssl.duitang.com/uploads/item/201501/02/20150102190405_aRzmP.thumb.700_0.jpeg" alt=""></a></li>
+            <li><a href="https://b-ssl.duitang.com/uploads/item/201608/14/20160814220033_sV5E4.thumb.700_0.png"  target="_blank"><img src="https://b-ssl.duitang.com/uploads/item/201608/14/20160814220033_sV5E4.thumb.700_0.png" alt=""></a></li>
+            <li><a href="https://b-ssl.duitang.com/uploads/item/201612/04/20161204003906_XvEZV.thumb.700_0.jpeg" target="_blank"><img src="https://b-ssl.duitang.com/uploads/item/201612/04/20161204003906_XvEZV.thumb.700_0.jpeg" alt=""></a></li>
+            <li><a href="https://b-ssl.duitang.com/uploads/item/201505/01/20150501224059_GMsuc.thumb.700_0.jpeg" target="_blank"><img src="https://b-ssl.duitang.com/uploads/item/201505/01/20150501224059_GMsuc.thumb.700_0.jpeg" alt=""></a></li>
+            <li><a href="https://b-ssl.duitang.com/uploads/item/201207/10/20120710192155_XkiGA.thumb.700_0.jpeg" target="_blank"><img src="https://b-ssl.duitang.com/uploads/item/201207/10/20120710192155_XkiGA.thumb.700_0.jpeg" alt=""></a></li>
+            <li><a href="https://b-ssl.duitang.com/uploads/item/201612/04/20161204233353_hs3MS.thumb.700_0.jpeg" target="_blank"><img src="https://b-ssl.duitang.com/uploads/item/201612/04/20161204233353_hs3MS.thumb.700_0.jpeg" alt=""></a></li>
+            <li><a href="https://b-ssl.duitang.com/uploads/item/201608/01/20160801050025_tcCB5.thumb.700_0.jpeg" target="_blank"><img src="https://b-ssl.duitang.com/uploads/item/201608/01/20160801050025_tcCB5.thumb.700_0.jpeg" alt=""></a></li>
+            <li><a href="https://b-ssl.duitang.com/uploads/item/201611/12/20161112201645_CtTLW.thumb.700_0.jpeg" target="_blank"><img src="https://b-ssl.duitang.com/uploads/item/201611/12/20161112201645_CtTLW.thumb.700_0.jpeg" alt=""></a></li>
+            <li><a href="https://b-ssl.duitang.com/uploads/item/201608/01/20160801045937_N8zdY.thumb.700_0.jpeg" target="_blank"><img src="https://b-ssl.duitang.com/uploads/item/201608/01/20160801045937_N8zdY.thumb.700_0.jpeg" alt=""></a></li>
+            <li><a href="https://b-ssl.duitang.com/uploads/item/201703/20/20170320034707_VGSPB.thumb.700_0.png"  target="_blank"><img src="https://b-ssl.duitang.com/uploads/item/201703/20/20170320034707_VGSPB.thumb.700_0.png" alt=""></a></li>
+            <li><a href="https://b-ssl.duitang.com/uploads/item/201703/26/20170326143100_5eGnN.thumb.700_0.jpeg" target="_blank"><img src="https://b-ssl.duitang.com/uploads/item/201703/26/20170326143100_5eGnN.thumb.700_0.jpeg" alt=""></a></li>
+            <li><a href="https://b-ssl.duitang.com/uploads/item/201510/25/20151025021630_daVuf.thumb.700_0.jpeg" target="_blank"><img src="https://b-ssl.duitang.com/uploads/item/201510/25/20151025021630_daVuf.thumb.700_0.jpeg" alt=""></a></li>
+            <li><a href="https://b-ssl.duitang.com/uploads/item/201607/09/20160709194603_cZm8K.thumb.700_0.jpeg" target="_blank"><img src="https://b-ssl.duitang.com/uploads/item/201607/09/20160709194603_cZm8K.thumb.700_0.jpeg" alt=""></a></li>
+            <li><a href="https://b-ssl.duitang.com/uploads/item/201702/27/20170227011025_KM5Ca.thumb.700_0.jpeg" target="_blank"><img src="https://b-ssl.duitang.com/uploads/item/201702/27/20170227011025_KM5Ca.thumb.700_0.jpeg" alt=""></a></li>
+            <li><a href="https://b-ssl.duitang.com/uploads/blog/201308/31/20130831225339_zav34.thumb.700_0.jpeg" target="_blank"><img src="https://b-ssl.duitang.com/uploads/blog/201308/31/20130831225339_zav34.thumb.700_0.jpeg" alt=""></a></li>
+            <li><a href="https://a-ssl.duitang.com/uploads/item/201503/24/20150324222021_EfV5Z.thumb.700_0.jpeg" target="_blank"><img src="https://a-ssl.duitang.com/uploads/item/201503/24/20150324222021_EfV5Z.thumb.700_0.jpeg" alt=""></a></li>
+            <li><a href="https://b-ssl.duitang.com/uploads/item/201601/09/20160109223027_cxdWK.thumb.700_0.jpeg" target="_blank"><img src="https://b-ssl.duitang.com/uploads/item/201601/09/20160109223027_cxdWK.thumb.700_0.jpeg" alt=""></a></li>
+            <li><a href="https://b-ssl.duitang.com/uploads/item/201701/31/20170131135613_Chxd8.thumb.700_0.jpeg" target="_blank"><img src="https://b-ssl.duitang.com/uploads/item/201701/31/20170131135613_Chxd8.thumb.700_0.jpeg" alt=""></a></li>
+            <li><a href="https://b-ssl.duitang.com/uploads/item/201507/10/20150710224643_LPASG.thumb.700_0.jpeg" target="_blank"><img src="https://b-ssl.duitang.com/uploads/item/201507/10/20150710224643_LPASG.thumb.700_0.jpeg" alt=""></a></li>
+            <li><a href="https://b-ssl.duitang.com/uploads/item/201704/02/20170402133125_B2EuR.thumb.700_0.jpeg" target="_blank"><img src="https://b-ssl.duitang.com/uploads/item/201704/02/20170402133125_B2EuR.thumb.700_0.jpeg" alt=""></a></li>
         </ul>
     </div>
 
