添加瀑布流的媒体查询

--- a/jQuery实现瀑布流-木桶流布局/瀑布流/index.html
+++ b/jQuery实现瀑布流-木桶流布局/瀑布流/index.html
@@ -39,7 +39,11 @@
             border: none;
             width: 320px;
         }
-
+        @media screen and (max-width: 960px) {
+        .imgUl img {
+                width: 200px;
+            }
+        }
 
     </style>
 </head>
