修改媒体查询尺寸

--- a/jQuery实现瀑布流-木桶流布局/瀑布流/index.html
+++ b/jQuery实现瀑布流-木桶流布局/瀑布流/index.html
@@ -39,9 +39,14 @@
             border: none;
             width: 320px;
         }
-        @media screen and (max-width: 960px) {
+        @media screen and (max-width: 800px) {
         .imgUl img {
                 width: 200px;
+            }
+        }
+        @media screen and (max-width: 500px) {
+        .imgUl img {
+                width: 145px;
             }
         }
 
