--- a/JS面向对象实践-组件化/轮播图组件.html
+++ b/JS面向对象实践-组件化/轮播图组件.html
@@ -2,7 +2,7 @@
 <html lang="zh-cn">
 <head>
     <meta charset="utf-8">
-    <title>jQuery实现轮播图</title>
+    <title>轮播组件</title>
     <!-- 优先使用 IE 最新版本和 Chrome -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     
