解决IE下不兼容背景透明问题

--- a/仿站/bilibili/index.html
+++ b/仿站/bilibili/index.html
@@ -101,7 +101,7 @@
                 <div class="carousel">
                     <ul class="c-img clearfix">
                         <li>
-                            <a href="">
+                            <a href="#">
                                 <img data-title="百日宅舞 Party GO！" src="images/banner_1.jpg" alt="">
                             </a>
                         </li>
@@ -111,17 +111,17 @@
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="#">
                                 <img data-title="声优都是怪物Σ( ° △ °|||)︴" src="images/banner_3.jpg" alt="">
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="#">
                                 <img data-title="￥%*！@……好听！" src="images/banner_4.jpg" alt="">
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="#">
                                 <img data-title="你喜欢书吗？" src="images/banner_5.jpg" alt="">
                             </a>
                         </li>
