--- a/仿站/bilibili/index.html
+++ b/仿站/bilibili/index.html
@@ -98,7 +98,7 @@
             
             <div class="carousel-box middle-box">
                 <!-- 轮播图区域 -->
-                <div class="carousel">
+                <div class="carousel-banner carousel">
                     <ul class="c-img clearfix">
                         <li>
                             <a href="#">
