尝试 r.js 打包项目

--- a/仿站/bilibili/index.html
+++ b/仿站/bilibili/index.html
@@ -483,8 +483,6 @@
     <div class="footer">
         
     </div>
-    <script src="https://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
-    <script src="js/carousel.js"></script>
-    <script src="js/tab-top-mv.js"></script>
+    <script data-main="js/disc/main-built.js"  src="js/require.js"></script>
 </body>
 </html>
