JOJO全屏轮播图

--- a/jojo/index.html
+++ b/jojo/index.html
@@ -18,8 +18,24 @@
             </ul>
         </div>
     </nav>
+    <div class="top"></div>
     <div id="header">
-        <video class="header-video" src="video/jojo_star.mp4" autoplay="" loop=""></video>
+        <div class="carousel clearfix">
+            <ul class="slides-img clearfix">
+                <li data-index="0"><a href="#"><img src="images/banner_1.jpg" alt=""></a></li>
+                <li data-index="1"><a href="#"><img src="images/banner_2.jpg" alt=""></a></li>
+                <li data-index="2"><a href="#"><img src="images/banner_3.jpg" alt=""></a></li>
+                <li data-index="3"><a href="#"><img src="images/banner_4.jpg" alt=""></a></li>
+            </ul>
+            <a href="#" class="btn prev"><img src="images/prev.png" alt=""></a>
+            <a href="#" class="btn next"><img src="images/next.png" alt=""></a>
+            <ul class="shulling-btn">
+                <li class="active"></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
         <div class="intro-text">
             <p>很高兴见到你</p>
             <h1>欢迎来到JOJO的世界！</h1>
@@ -156,4 +172,5 @@
         </div>
     </div>
 </body>
+<script data-main="js/main.js" src="js/require.js"></script>
 </html>
